--- a/source/_data/links.yml
+++ b/source/_data/links.yml
@@ -119,7 +119,11 @@ links:
         avatar: https://blog.walterfang.site/walterfang.jpg
         descr: 正在学习与人交流 || INFJ-T || Software Developer&Rhythm Game Player || He/Him
       - name: bbb-lsy07
-        link: https://i.bbb-lsy07.sbs/
-        avatar: https://i.bbb-lsy07.sbs/upload/quality_restoration_20250211145207618.JPG
+        link: https://blog.6uu.us/
+        avatar: https://images.6uu.us/20250511114301488.JPG
         descr: 科技激荡人文，洞见智慧本真。
         topimg: https://img.z4a.net/images/2025/02/16/2025-02-16-14.08.18.png
+      - name: liangbm3’s blog
+        link: https://liangbm3.site/
+        avatar: https://liangbm3.site/avatar.png
+        descr: 总有人间一两风，填我十万八千梦。
