--- a/source/_data/about.yml
+++ b/source/_data/about.yml
@@ -69,8 +69,8 @@ personalities:
 
 motto:
   title: 座右铭
-  prefix: 所有的进步
-  content: 都在路上。
+  prefix: Run the code
+  content: Run after the code
 expertise:
   title: 特长
   prefix: 敲代码
