--- a/source/_data/brevity.yaml
+++ b/source/_data/brevity.yaml
@@ -15,10 +15,10 @@
   #       alt: 主题交流群
   #   link: https://efu.me/
   - content: 感谢博客框架Hexo和博客主题Anzhiyu的支持
-    date: 2024/08/14
+    date: 2024-8-14 00:00:00
   - content: 第一篇博客题解祭2025.03.23
-    date: 2025/03/23
+    date: 2025-3-23 00:00:00
   - content: 洛谷第二次绿名祭2025.05.14
-    date: 2025/05/14
+    date: 2025-5-14 00:00:00
   - content: 主题迁移到Solitude啦！
-    date: 2025/05/29
+    date: 2025-5-29 00:00:00
