--- a/_config.yml
+++ b/_config.yml
@@ -4,8 +4,8 @@
 
 # Site
 title: Admibrill
-subtitle: 有志者,事竟成.
-description: 有志者,事竟成.
+subtitle: Run the code, run after the code
+description: 吾运行之，吾追求之
 keywords:
 author: Admibrill
 language: zh-CN
@@ -14,7 +14,7 @@ timezone: ''
 # URL
 ## Set your site url here. For example, if you use GitHub Page, set url as 'https://username.github.io/project'                     left
 url: https://blog.qyadbr.top
-permalink: :year/:month/:day/:title/
+permalink: posts/:title/
 permalink_defaults:
 pretty_urls:
   trailing_index: true # Set to false to remove trailing 'index.html' from permalinks
